# EZ-EMFI

./: .git_commit_message.txt  .gitignore  .gitmodules  Agents-vs-slash-cmds.md  CLAUDE.md  COMMIT_MSG.txt  COMPARISON_ANALYSIS.md  CONTINUE_PROMPT.md  DS1120-PD_app.yaml  DS1120_PD_app.yaml  DS1140_PD_IMPLEMENTATION_GUIDE.md  DS1140_PD_PROJECT_SUMMARY.md  DS1140_PD_REGISTER_TYPES.md  DS1140_PD_REQUIREMENTS.md  DS1140_PD_THREE_OUTPUT_DESIGN.md  DS1140_PD_app.yaml  HandShakeProtocol.md  PHASE2-SUMMARY.md  PHASE2-TODO.md  PHASE2-prompt.md  PHASE2_COMPLETE.md  PHASE2_QUICK_START.md  PHASE3-JC-TODO.md  PHASE3-TODO.md  README-COCOTB.md  README.md  SESSION_HANDOFF.md  SESSION_SUMMARY.md  TESTING-AND-COMPILING-DS1140-PD.md  VOLO_FRAMEWORK_MIGRATION.md  comparison_result.txt  pyproject.toml  test_counter_16bit.yaml
VHDL/: DS1120_PD_volo_main.vhd  DS1120_PD_volo_shim.vhd  DS1140_PD_volo_main.vhd  DS1140_PD_volo_shim.vhd  Debug_Top.vhd  Top.vhd  ds1120_pd_fsm.vhd  ds1120_pd_pkg.vhd  fsm_observer.vhd  test_shim_handshake.vhd  volo_bram_loader.vhd  volo_clk_divider.vhd  volo_voltage_threshold_trigger_core.vhd
configs/: ds1140_pd_deploy.json
docs/: BasicNetworkRegSafety_plan.md  BasicNetworkRegSafety_plan_prompt.md  COCOTB_PATTERNS.md  CUSTOM_INSTRUMENT_IMPLEMENTATION_PROMPT.md  CUSTOM_INSTRUMENT_MIGRATION_PLAN.md  CocoTB-TestingNetworkRegs.md  FSM_OBSERVER_PATTERN.md  OSCILLOSCOPE_DEBUGGING_TECHNIQUES.md  PROGRESSIVE_TESTING_GUIDE.md  USING_PATTERNS_REFERENCE.md  VHDL_COCOTB_LESSONS_LEARNED.md
examples/: README.md  deploy_bram_loader_with_debug.py  test_fsm_example.py  test_verbosity_demo.py
static/: PHASE4-done.txt
tests/: test_app_register.py  test_configs.py  test_ds1120_pd_volo_progressive.py  test_ds1140_pd_progressive.py  test_handshake_shim_progressive.py  test_volo_bram_loader_progressive.py  test_volo_clk_divider_progressive.py  test_volo_lut_pkg_progressive.py  test_volo_voltage_pkg_progressive.py  volo_lut_pkg_tb_wrapper.vhd  volo_voltage_pkg_tb_wrapper.vhd
tools/: check_moku_status.py  check_oscilloscope.py  debug_fsm_states.py  debug_oscilloscope.py  debug_outputs.py  deploy_ds1140_pd.py  ds1140_tui_prototype.py  fire_now.py  (+17 more)
(+76 files in other folders)
